style.css
/* ... */
.site-logo img {
	margin-bottom: 10px;
	-webkit-border-radius: 95px;
	border-radius: 95px;
	max-width: 70px;
	height: auto;
}

.site-title a {
	color: inherit;
	text-decoration: none;
}

.site-title {
	margin: 0;
	font-size: 16px;
	line-height: 1.2;
	letter-spacing: inherit;
}

.site-description {
	margin: 0 0 20px 0;
	color: rgba(117, 117, 117, 0.78);
	font-size: 13px;
	font-family: inherit;
	line-height: 1.4;
	font-style: italic;
	letter-spacing: inherit;
	font-weight: inherit;
	margin-top: 5px;
}
.site-published-separator {
    border-top: 1px solid #dededc;
    padding-top: 20px;
    width: 40px;
    float: right;
}
.site-published {
	margin: 10px 0 0 0;
	color: #333332;
	font-size: 14px;
	line-height: 1.4;
	font-style: normal;
	font-weight: bold;
	letter-spacing: inherit;
}
.site-published-date {
	margin: 5px 0 0 0;
	color: rgba(117, 117, 117, 0.78);
	font-size: 12px;
	font-family: inherit;
	line-height: 1.4;
	letter-spacing: inherit;
	font-weight: inherit;
    font-style: normal;
}
.site-published-date a, .site-published-location a {
	color: rgba(117, 117, 117, 0.78);
	text-decoration: none;
}
.site-published-location {
	margin: 0 0 20px 0;
	color: rgba(117, 117, 117, 0.78);
	font-size: 12px;
	font-family: inherit;
	line-height: 1.4;
	font-style: normal;
	letter-spacing: inherit;
	font-weight: inherit;
}

.main-navigation ul,
.widget-area ul,
.widget-area ol {
	margin: 0;
	padding: 0;
	list-style: none;
}

.main-navigation li,
.widget-area li {
	display: block;
	margin: 0;
	padding: 0;
}

.main-navigation a,
.widget-area ul li a {
	padding: 5px 0px;
	text-decoration: none;
	display: block;
	line-height: 1;
}
.widget-area ul li a:hover {
	text-decoration: underline;
}

.widget-area .widget-title {
	font-size: 16px;
	letter-spacing: inherit;
	margin-bottom: 10px;
}

.site-navigation,
.post-navigation {
	margin-top: 20px;
}

.infinite-scroll .site-navigation {
	display: none;
}

.infinite-scroll .main-navigation,
.infinite-scroll .main-small-navigation {
	display: block;
}

.infinite-loader {
	display: block;
	padding-left: 50%;
}

.infinite-loader .spinner {
	margin-left: -17px;
}

#infinite-handle {
	margin-top: 20px;
	text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 20px 0;
	font-family:"Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	color: #333332;
	letter-spacing: -1px;
	font-weight: 700;
	line-height: 1;
}

h1 {
	font-size: 2.5em;
}

h2 {
	font-size: 1.6em;
}

h3 {
	font-size: 1.4em;
}

h4,
h5,
h6 {
	font-weight: 300;
}

.page h1.entry-title {margin-top: 0px; }

.blog article,
.archive article,
.search article {
	padding: 40px 0 40px 0;
	border-bottom: solid 1px #ddd;
}

.entry-title a {
	color: #404040;
	text-decoration: none;
}

.entry-title a:hover {
	color: #57ad68;
}

.entry-title-meta {
	font-size: 13px;
   color: #b3b3b1;
   font-weight: 100;
   letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
	font-style: normal;
}
.entry-title-meta a {
	color: #b3b3b1;
	text-decoration: none;
}

.entry-title-meta-author {
	display: none;
}

.entry-meta,
.entry-meta a {
	color: #b3b3b1;
	font-size: 13px;
	font-family: "Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-weight: 100;
	font-style: normal;
	text-align: right;
}

.entry-meta a:hover {
	color: #57ad68;
}
.single .entry-meta {
	border-top: 1px solid #eee;
	padding-bottom: 40px;
	padding-top: 40px;
}

.site {
	background-color: #ffffff;
	margin: 120px auto;
	padding: 0 40px;
	max-width: 700px;
	margin-bottom: 0;
}

.site-header {
	float: left;
	margin-top: 0px;
	margin-bottom: 40px;
	width: 160px;
	position: relative;
	margin-left: -220px;
	text-align: right;
}

.site-content,
.site-footer {
	float: right;
	max-width: 700px;
	width: 100%;
}

.widget-area {
	float: left;
	width: 160px; /* Sidebar 1 */
	clear: left;
	margin-left: -220px;
	text-align: right;
	font-family: "Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-size: 15px;
}

.site-header,
.entry-header,
.entry-content,
.widget-area .widget,
.comment {
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
	word-wrap: break-word;
}

.widget_search input[type="text"] { /* fixes overflow issue */
	width: 90%;
}

.site-footer {
	clear: both;
	margin-top: 100px;
	margin-bottom: 40px;
	color: #999;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	text-align: center;
}

.site-footer a:hover {
	color: #57ad68;
}

img#wpstats {
	display: block;
	margin: 5px auto;
}

table td {
	padding: 4px 0;
	border-bottom: solid 1px #eee;
	font-weight: 300;
}

table th {
	padding: 4px 0;
	border-bottom: solid 1px #ccc;
}

/* Post Author Bottom Card */

.post-author-bottom {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-bottom: 40px;
	position: relative;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	display: none;
}

.post-author-bottom .site-logo img {
	float: left;
	width: 70px;
	height: auto;
}
.post-author-bottom .site-title,
.post-author-bottom .site-description {
	clear: none;
}
.post-author-bottom .post-author-info {
	margin-left: 100px;
	margin-right: 200px;
	padding-right:  25px;
	padding-top: 10px;
}
.post-author-bottom h1.site-title,
.post-author-bottom h2.site-description {
	margin-left: 0;
}
.post-author-bottom .post-published-date {
	width: 177px;
	padding-left: 385px;
	position: absolute;
	margin-top: -85px;
	top: 135px;
	right: 0;
}

/* Hide left-side author card under 1200px */
@media only screen and (max-width : 1200px) {
	.site-header {
		display: none;
	}
	.post-author-bottom {
		display: block;
	}
	.entry-meta {
		border-bottom: none;
	}
	.entry-title-meta-author {
		display: inline-block;
	}
	.widget-area {
		float: right;
		width: 100%;
		margin-left: 0;
		text-align: inherit;
		padding-top: 40px;
	}
   .single .entry-meta {
	   border-top: none;
   }
}
/* ... */

